force-app/main/default/objects/Interviewers__c/Interviewers__c.object-meta.xml
<CustomObject>
    <description>junction object between the contact and job application</description>
    <label>Interviewers</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interviewers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>