force-app/main/default/objects/Interviewers__c/fields/Interviewer__c.field-meta.xml
<CustomField>
    <fullName>Interviewer__c</fullName>
    <label>Interviewer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Interviewers</relationshipLabel>
    <relationshipName>Interviewers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>