force-app/main/default/objects/Interviewers__c/recordTypes/Interviewers.recordType-meta.xml
<RecordType>
    <fullName>Interviewers</fullName>
    <active>true</active>
    <label>Interviewers</label>
</RecordType>